Fix spacing and only include in DOM when showing

--- a/WebApplication/ClientApp/src/components/modalUpdateFailed.css
+++ b/WebApplication/ClientApp/src/components/modalUpdateFailed.css
@@ -1,8 +1,8 @@
 .modalUpdateFailedContent {
-    height: 86px;
+    height: 119px;
 }
 
-.buttonsContainer {
+.modalUpdateFailedButtonsContainer {
     display: flex;
     flex-flow: row-reverse;
 }
